# FFImageSuite

./: .gitignore  CMakeLists.txt  README.md  command_split.cpp  main.cpp  test.bat
Application/: main.cpp
inc/commands/: command.hpp  command_factory.hpp
inc/commands/impl/: command_exit.hpp  command_flip.hpp  command_greyscale.hpp  command_help.hpp  command_load_bmp.hpp  command_man.hpp  command_merge.hpp  command_mix.hpp  command_rotate.hpp  command_split.hpp
inc/utils/: binary_reader.hpp  binary_writer.hpp  bmp_format.hpp
src/: main.cpp
src/commands/: command_factory.cpp
src/commands/impl/: command_exit.cpp  command_flip.cpp  command_greyscale.cpp  command_help.cpp  command_load_bmp.cpp  command_man.cpp  command_merge.cpp  command_mix.cpp  command_rotate.cpp  command_split.cpp
src/utils/: binary_reader.cpp  binary_writer.cpp  bmp_format.cpp
tests/: CMakeLists.txt  main.cpp
tests/gtest-1.8.0/bb/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/gtest-1.8.0/bb/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/gtest-1.8.0/bb/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/gtest-1.8.0/googletest/xcode/gtest.xcodeproj/project.xcworkspace/xcuserdata/Daniel.xcuserdatad/: UserInterfaceState.xcuserstate
tests/gtest-1.8.0/googletest/xcode/gtest.xcodeproj/xcuserdata/Daniel.xcuserdatad/xcschemes/: Check.xcscheme  Version Info.xcscheme  gtest-framework.xcscheme  gtest-static.xcscheme  gtest_main-static.xcscheme  gtest_unittest-framework.xcscheme  gtest_unittest-static.xcscheme  sample1_unittest-framework.xcscheme  sample1_unittest-static.xcscheme
